# psdlayer2dirpy

./: .gitignore  Dockerfile  Dockerfile.package  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/workflows/: build.yml  lint.yml  release.yml
aoirint_psdlayer2dirpy/: cli.py  main.py
aoirint_psdlayer2dirpy/util/: iterable_utility.py
